Сверстала все страницы

--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -15,21 +15,21 @@
   padding: 0;
   margin: 0 auto;
   margin-bottom: 30px;
-  width: 280px;
+  width: @content-width;
 }
 
 .commercial__text {
   line-height: @text-line-height;
 
   display: block;
-  width: 280px;
+  width: @content-width;
   margin: 0 auto;
 }
 
 .commercial__link {
   text-decoration: none;
   display: block;
-  width: 280px;
+  width: @content-width;
   margin: 0 auto;
   margin-top: 40px;
 }
