--- a/source/less/blocks/page-container.less
+++ b/source/less/blocks/page-container.less
@@ -5,7 +5,7 @@
 
 @media (min-width: @desktop-width) {
   .page-container {
-     width: 1200px;
+     width: @desktop-width;
      margin: 0 auto;
 
     background-color: #ffffff;
