--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -4,7 +4,7 @@
   padding-top: 42px;
   padding-bottom: 10px;
   text-align: center;
-  width: 280px;
+  width: @content-width;
   margin: 0 auto;
 }
 
