--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -9,7 +9,7 @@
 
 .photo__meta {
   padding-top: 15px;
-  width: 280px;
+  width: @content-width;
   margin: 0 auto;
 }
 
@@ -31,7 +31,7 @@
     padding-bottom: 20px;
     display: flex;
     justify-content: space-around;
-    width: 324px;
+    width: @tablet-item-width;
 
     background-color: #f2f2f2;
   }
