--- a/source/less/blocks/promo-photo.less
+++ b/source/less/blocks/promo-photo.less
@@ -45,7 +45,7 @@
 
 .promo-photo__image {
   display: block;
-  width: 280px;
+  width: @content-width;
   height: 280px;
   background-color: #eeb170;
   margin: 0 auto;
@@ -81,7 +81,7 @@
 
 @media (min-width: @desktop-width) {
   .promo-photo--first {
-    width: 1200px;
+    width: @desktop-width;
   }
 
   .promo-photo {
