--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -109,7 +109,7 @@
     left: 50%;
     transform: translateX(-50%);
 
-    width: 1200px;
+    width: @desktop-width;
     height: 61px;
 
     background-image: url(../img/bg-intro-triangle-desktop.png);
@@ -130,7 +130,7 @@
     left: 50%;
     transform: translateX(-50%);
 
-    width: 1200px;
+    width: @desktop-width;
     height: 61px;
 
     background-image: url(../img/bg-intro-triangle-desktop.png);
