--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -36,6 +36,9 @@
 
   .main-nav__link {
     color: @text-dark;
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 700;
   }
 
   .main-nav__list {
@@ -47,11 +50,13 @@
   }
 
   .main-nav__item {
-    width: 166.5px;
+    width: 153px;
+    padding-top: 12px;
+    padding-bottom: 16px;
   }
 
   .main-nav__item:nth-child(2) {
-    margin-right: 102px;
+    margin-right: 148px;
   }
 }
 
