--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -4,16 +4,15 @@
 }
 
 .page-form__button {
-  margin: 0;
-  margin-left: @indent-side;
-  margin-right: @indent-side;
+  display: block;
+  margin: 0 auto;
+  width: @content-width;
   margin-top: 25px;
   margin-bottom: 37px;
 }
 
 @media (min-width: @tablet-width) {
   .page-form__button {
-    margin: 0;
     margin-bottom: 60px;
     width: @tablet-item-width;
   }
