--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -10,58 +10,56 @@
 
 @semi-dark: #f2f2f2;
 
-@indent-side: 20px;
-
-@tablet-padding-side: 60px;
-
-@desktop-padding-side: 120px;
-
-@desktop-commercial-padding: 80px;
-
-@indent-top: 23px;
-
-@padding-bottom: 28px;
-
-@content-width: 280px;
-
-@border: 1px solid #d6d6d6;
-
 @title-font-size: 18px;
-
-@title-line-height: 26px;
 
 @placeholder-font-size: 18px;
 
-@placeholder-line-height: 26px;
-
 @main-nav-font-size: 18px;
-
-@heading-line-height: 26px;
 
 @heading-font-size: 21px;
 
-@button-line-height: 26px;
-
 @button-font-size: 21px;
 
-@hashtag-line-height: 26px;
-
 @hashtag-font-size: 21px;
+
+@title-line-height: 26px;
+
+@placeholder-line-height: 26px;
+
+@hashtag-line-height: 26px;
 
 @text-line-height: 24px;
 
 @promo-photo-line-height: 24px;
 
-@tablet-width: 768px;
+@heading-line-height: 26px;
 
-@mobile-width-only: 767px;
+@button-line-height: 26px;
+
+@content-width: 280px;
+
+@border: 1px solid #d6d6d6;
+
+@indent-side: 20px;
+
+@indent-top: 23px;
+
+@padding-bottom: 28px;
+
+@tablet-width: 768px;
 
 @tablet-content-width: 648px;
 
 @tablet-item-width: 324px;
 
+@tablet-padding-side: 60px;
+
 @desktop-width: 1200px;
 
-@advantages-tablet-width: 168px;
+@desktop-padding-side: 120px;
 
-@advantages-desktop-width: 288px;
+@desktop-commercial-padding: 80px;
+
+@mobile-width-only: 767px;
+
+@transition-to-desktop: 769px;
