поправила трэвис снова

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -23,7 +23,7 @@
 }
 
 .main-nav__button {
-  /*высота временно для сетки*/;
+  /*высота временно для сетки*/
   height: 58px;
   width: 25px;
   margin-left: 277px;
