--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -26,7 +26,7 @@
   }
 
   .photo__meta {
-    padding-right: 0px;
+    padding-right: 0;
     padding-left: 0;
     padding-bottom: 20px;
     display: flex;
