--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -28,7 +28,7 @@
     width: 323px;
     height: 30px;
 
-    background-image: url(../img/bg-intro-triangle-mobile.svg);
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -44,7 +44,7 @@
     width: 323px;
     height: 30px;
 
-    background-image: url(../img/bg-intro-triangle-mobile.svg);
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -77,7 +77,7 @@
     width: 768px;
     height: 61px;
 
-    background-image: url(../img/bg-intro-triangle-tablet.png);
+    background-image: url("../img/bg-intro-triangle-tablet.png");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -93,7 +93,7 @@
     width: 768px;
     height: 61px;
 
-    background-image: url(../img/bg-intro-triangle-tablet.png);
+    background-image: url("../img/bg-intro-triangle-tablet.png");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -112,7 +112,7 @@
     width: @desktop-width;
     height: 61px;
 
-    background-image: url(../img/bg-intro-triangle-desktop.png);
+    background-image: url("../img/bg-intro-triangle-desktop.png");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -133,7 +133,7 @@
     width: @desktop-width;
     height: 61px;
 
-    background-image: url(../img/bg-intro-triangle-desktop.png);
+    background-image: url("../img/bg-intro-triangle-desktop.png");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
