--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -5,8 +5,8 @@
   color: @text-light;
 
   width: @content-width;
-  padding-top: @indent-side;
-  padding-bottom: @indent-side;
+  padding-top: 17px;
+  padding-bottom: 17px;
 
   background-color: @text-info;
   border: none;
