--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,5 +1,6 @@
 .photo__wrapper {
   border-top: @border;
+  margin: 0 auto;
 }
 
 .photo__description {
@@ -23,6 +24,7 @@
     display: flex;
     flex-wrap: wrap;
     border: none;
+    width: @tablet-content-width;
   }
 
   .photo__meta {
@@ -54,6 +56,7 @@
   }
 
   .photo__wrapper {
+    width: @desktop-width;
     padding-top: 10px;
   }
 
