--- a/source/less/blocks/commercial.less
+++ b/source/less/blocks/commercial.less
@@ -1,5 +1,5 @@
 .commercial__content {
-  padding-top: 33px;
+  padding-top: 25px;
   padding-bottom: 50px;
   padding-right: @indent-side;
   padding-left: @indent-side;
@@ -14,7 +14,7 @@
 
   padding: 0;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   width: @content-width;
 }
 
@@ -31,7 +31,7 @@
   display: block;
   width: @content-width;
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 35px;
 }
 
 .commercial--inner .commercial__text {
@@ -67,9 +67,26 @@
 }
 
 @media (min-width: @tablet-width) {
+  .commercial__content {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .commercial__title {
+    font-size: 30px;
+    line-height: 26px;
+
+    width: 400px;
+    margin-bottom: 30px;
+  }
+
   .commercial__text,
   .commercial__link {
     width: 460px;
+  }
+
+  .commercial__link {
+    margin-top: 42px;
   }
 
   .commercial--inner .commercial__text {
@@ -92,6 +109,10 @@
   .commercial__content {
     padding-top: 57px;
     padding-bottom: 67px;
+  }
+
+  .commercial__link {
+    margin-top: 45px;
   }
 
   .commercial__video {
