--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -22,14 +22,58 @@
   text-decoration: none;
 }
 
+.main-nav__wrapper {
+  width: @content-width;
+  margin: 0 auto;
+  padding-top: 14px;
+  padding-bottom: 17px;
+}
+
 .main-nav__button {
-  /*высота временно для сетки*/
-  height: 58px;
   width: 25px;
-  margin-left: 277px;
+  height: 25px;
+  margin-left: 257px;
+
+  border: 0;
+  padding: 0;
+  background-color: inherit;
+}
+
+.main-nav--closed {
+  display: block;
+}
+
+.main-nav__image {
+  display: block;
+  margin: 0 auto;
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--opened {
+    width: @content-width;
+    margin: 0 auto;
+
+    position: relative;
+  }
+
+  .main-nav--opened::after {
+    content: "";
+
+    position: absolute;
+    top: 17px;
+    left: 257px;
+
+    width: 22.5px;
+    height: 22.5px;
+
+    background-image: url("../img/icon-cross.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
 }
 
 @media (min-width: @tablet-width) {
+  .main-nav__wrapper,
   .main-nav__button {
     display: none;
   }
@@ -39,30 +83,70 @@
     font-size: 14px;
     line-height: 26px;
     font-weight: 700;
+    display: block;
+  }
+
+  .main-nav__item:nth-child(1) .main-nav__link {
+    margin-left: 5px;
+  }
+
+  .main-nav__item:nth-child(2) .main-nav__link {
+    margin-left: 12px;
+  }
+
+  .main-nav__item:nth-child(3) .main-nav__link {
+    margin-left: 30px;
+  }
+
+  .main-nav__item:nth-child(4) .main-nav__link {
+    margin-left: 30px;
   }
 
   .main-nav__list {
+    width: 768px;
+    margin: 0 auto;
+
     background-color: @text-light;
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
   }
 
   .main-nav__item {
-    width: 153px;
-    padding-top: 12px;
+    width: 150px;
+    padding-top: 14px;
     padding-bottom: 16px;
   }
 
   .main-nav__item:nth-child(2) {
-    margin-right: 148px;
+    margin-right: 151px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .main-nav__list {
+    width: 1200px;
+  }
+
   .main-nav__item {
-    width: 253px;
+    width: 250px;
+    padding-top: 12.5px;
+  }
+
+  .main-nav__item:nth-child(1) .main-nav__link {
+    margin-right: 15px;
+  }
+
+  .main-nav__item:nth-child(2) .main-nav__link {
+    margin-right: 44px;
+  }
+
+  .main-nav__item:nth-child(3) .main-nav__link {
+    margin-left: 58px;
+  }
+
+  .main-nav__item:nth-child(4) .main-nav__link {
+    margin-left: 37px;
   }
 
   .main-nav__item:nth-child(2) {
