--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,8 +1,8 @@
 .page-footer {
   text-align: center;
 
-  padding-top: 40px;
-  padding-bottom: 23px;
+  padding-top: 35px;
+  padding-bottom: 35px;
   padding-left: 85px;
   padding-right: 85px;
 
@@ -21,9 +21,26 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
-    padding: 37px @tablet-padding-side;
+    padding: 30px 60px;
+    margin: 0 auto;
+    width: 768px;
+    box-sizing: border-box;
 
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+  }
+
+  .page-footer__hashtag {
+    margin: 0;
+    margin-top: 12px;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer {
+    width: 1200px;
+    padding: 33px 120px;
+    justify-content: space-between;
   }
 }
